--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.22"
+    "axios": "^0.18.0",
+    "vee-validate": "^2.1.7",
+    "vue": "^2.5.22",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
