--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.22",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.1"
   },
